# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  sonar-project.properties
.github/workflows/: sonar.yml
labels/: mixins.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py
statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  views.py
task_manager/statuses/: urls.py  views.py
task_manager/tasks/: urls.py  views.py
task_manager/templates/: create.html  delete.html  layout.html  login.html  registration.html
task_manager/users/: models.py
tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_executor.py
templates/: create.html  index.html  layout.html  login.html  update.html  users.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
templates/users/: create.html  index.html  login.html  update.html
users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
(+18 files in other folders)
